Adjust table cell padding to avoid cropping in pdf

--- a/src/components/base-components/custom-table/styles.css
+++ b/src/components/base-components/custom-table/styles.css
@@ -17,7 +17,7 @@ custom-table {
         }
         & td,
         & th {
-            padding: 8px 12px;
+            padding: 8px 10px;
             page-break-inside: avoid;
             &::after {
                 content: "";
